# osu-cleaner

./: package.json  pnpm-lock.yaml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/core/: cancel.rs  consts.rs  counters.rs  mod.rs  models.rs  patterns.rs  processor.rs
src-tauri/src/service/: file_processor_service.rs  mod.rs
src/lib/: consts.ts
src/lib/components/ui/analysis/: analyzer.svelte  category-item.svelte  delete-confirm-dialog.svelte  stat-card.svelte  summary.svelte
src/lib/components/ui/custom-alert/: alert.svelte
src/lib/components/views/: category.svelte  main.svelte
src/lib/services/: file_processor.ts
src/lib/states/: alert.svelte.ts  analyzer.svelte.ts  category.svelte.ts
src/lib/utils/: humanize.ts  icons.ts  interfaces.ts
src/routes/: +page.svelte
