[package]
name = "osu-cleaner"
version = "0.1.0"
description = "osu! beatmap cleaner"
authors = ["Fauzan Ardhana <fauzanardh@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.91"
log = "0.4"
rayon = "1.10.0"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
tauri = { version = "2.0.6", features = [] }
tauri-plugin-dialog = "2.0.3"
tauri-plugin-log = "2.0.1"
walkdir = "2.5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
